syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcPasswordService";

package passwords;

service PasswordProtoService {
  rpc CreatePassword (CreatePasswordRequest) returns (CreatePasswordResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
  rpc DeletePassword (DeletePasswordRequest) returns (DeletePasswordResponse);
  rpc GetPasswordsByUserId (GetPasswordsByUserIdRequest) returns (GetPasswordsResponse);
}

message CreatePasswordRequest {
	int32 user_id = 1;
	string title = 2;
	string login = 3;
	string password = 4;
	string icon_path = 5;
	optional string note = 8;
}

message CreatePasswordResponse {
	PasswordModel password = 1;
}

message UpdatePasswordRequest {
	PasswordModel password = 1;
}

message UpdatePasswordResponse {
	PasswordModel password = 1;
}

message DeletePasswordRequest {
	int32 id = 1;
}

message DeletePasswordResponse {
	PasswordModel password = 1;
}

message GetPasswordsByUserIdRequest {
	int32 user_id = 1;
}

message GetPasswordsResponse {
	repeated PasswordModel passwords = 1;
}

message PasswordModel {
	int32 id = 1;
	int32 user_id = 2;
	string title = 3;
	string login = 4;
	string password = 5;
	string icon_path = 6;
	google.protobuf.Timestamp created_at = 7;
	google.protobuf.Timestamp updated_at = 8;
	optional string note = 9;
}

