syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcPasswordService";

package passwords;

service PasswordProtoService {
  rpc CreatePassword (CreatePasswordRequest) returns (CreatePasswordResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
  rpc DeletePassword (DeletePasswordRequest) returns (DeletePasswordResponse);
  rpc GetPasswords (GetPasswordsRequest) returns (GetPasswordsResponse);
}

message CreatePasswordRequest {
	string title = 1;
	string login = 2;
	bytes encrypted_password = 3;
	string icon_path = 4;
	optional string note = 5;
}

message CreatePasswordResponse {
	string password_id = 1;
}

message UpdatePasswordRequest {
	UpdatePasswordDTO password = 1;
}

message UpdatePasswordResponse {
	string password_id = 1;
}

message DeletePasswordRequest {
	string id = 1;
}

message DeletePasswordResponse {
	string password_id = 1;
}

message GetPasswordsRequest {}

message GetPasswordsResponse {
	repeated PasswordResponse passwords = 1;
}

message UpdatePasswordDTO {
	string id = 1;
	string title = 2;
	string login = 3;
	bytes encrypted_password = 4;
	string icon_path = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
	optional string note = 8;
}

message PasswordResponse {
	string id = 1;
	string user_id = 2;
	string title = 3;
	string login = 4;
	bytes encrypted_password = 5;
	string icon_path = 6;
	google.protobuf.Timestamp created_at = 7;
	google.protobuf.Timestamp updated_at = 8;
	optional string note = 9;
}

